[package]
name = "typed_key"
version = "0.1.1"

authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/matklad/typed_key"
license = "MIT OR Apache-2.0"

categories = [ "config", "no-std", "rust-patterns" ]
description = """
Strongly-typed string keys for configuration.
"""

[features]
nightly = []

[dev-dependencies]
serde = "1"
serde_json = "1"
failure = "0.1.1"

[[test]]
name = "nightly"
required-features = [ "nightly" ]

[[test]]
name = "smoke"

[[test]]
name = "no_std_works"
